# uru

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  babel.config.js  package-lock.json  package.json  pnpm-lock.yaml  setup_database_and_data.sh  tailwind.config.js  turbo.json
.github/workflows/: release-macos.yml
app/: +not-found.tsx
app/(tabs)/: add.tsx  debtors.tsx  index.tsx  inventory.tsx  settings.tsx
apps/desktop/: DTO_GENERATION_PROMPT.md  package.json  setup_synthetic_data.sh
apps/desktop/docs/: modules.md  (+5 more)
apps/mobile/: app.json  package.json
cli/: index.ts
cli/commands/: db.ts  dev.ts  setup.ts
components/: Card.tsx  ThemedInput.tsx  ThemedText.tsx
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  SCHEMA.md  api.md  architecture.md  database.md  deployment.md  getting-started.md  index.md  troubleshooting.md
docs/architecture/: multi-database-architecture.md
public/: manifest.json
scripts/: reset-config.sh
scripts/python/: generate_synthetic_data.py
src/: styles.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: theme-provider.tsx
src/lib/: schema-registry.test.ts  schema-registry.ts  schema-tables.ts  table-csv.test.ts  table-csv.ts
src/routes/: __root.tsx  index.tsx  inventory.tsx  login.tsx  onboarding.tsx  orders.tsx  products.tsx  settings.tsx  tables.$table.tsx
src/types/: analytics.ts  database.ts
supabase/migrations/: 202603040001_uru_vnext_init.sql  202603040004_drop_supabase_settings_and_audit.sql  (+10 more)
(+617 files in other folders)
